[XForms] submission action="mailto.." not working. Bug 332009, r=doronr+me, patch by msterlin@us.ibm.com